updated picom configuration

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,6 +1,10 @@
 # configures corners
 corner-radius = 4.0;
 round-borders = 1;
+rounded-corners-exclude = [
+    "window_type = 'dock'",
+    "window_type = 'desktop'"
+];
 
 # configures shadows
 shadow = false;
@@ -34,7 +38,7 @@ opacity-rule = [
 	"90:class_g = 'zathura' && !focused",
 	"100:class_g = 'zathura' && !focused",
 	"100:class_g = 'discord' && focused",
-	"90:class_g = 'discord' && !focused",
+	"95:class_g = 'discord' && !focused",
 	"100:class_g = 'pcmanfm' && !focused || focused",
 	"90:class_g = 'rofi'",
 	"85:class_g = 'polybar'",
