clear workspace icons and tray

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -7,7 +7,7 @@ foreground-alt = #555
 [bar/main]
 enable-ipc = true
 width = 100%
-height = 24
+height = 26
 fixed-center = true
 
 background = ${colors.background}
@@ -28,6 +28,9 @@ font-0 = JetBrainsMono Nerd Font:pixelsize=12;3
 modules-left = arch workspaces cpu ram
 modules-center = spotify spotify-prev spotify-play-pause spotify-next
 modules-right = date time checkforupdates 
+
+tray-position = right
+tray-padding = 2
 
 [module/arch]
 type = custom/text
