--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -12,29 +12,47 @@ fixed-center = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
-line-size = 0
+line-size = 3
 line-color = #f00
 border-size = 0
 border-bottom-size = 1
 border-color = #f5e0dc
-padding-left = 1
-padding-right = 1
+padding-left = 2
+padding-right = 2
 
-module-margin-left = 1
-module-margin-right = 1
+module-margin-left = 2
+module-margin-right = 2
 
 font-0 = JetBrainsMono Nerd Font:pixelsize=12;3
 
-modules-left = arch workspaces cpu ram
+modules-left = arch i3 cpu ram
 modules-center = spotify spotify-prev spotify-play-pause spotify-next
 modules-right = date time checkforupdates 
 
 tray-position = right
-tray-padding = 2
+tray-padding = 0
 
 [module/arch]
 type = custom/text
 content = ""
+
+[module/i3]
+type = internal/i3
+enable-scroll = false
+format-padding = 1
+
+label-focused = %index%
+label-focused-background = #313244
+label-focused-padding = 1
+
+label-unfocused = %index%
+label-unfocused-padding = 1
+
+label-visible = %index%
+label-visible-padding = 1
+
+label-urgent = %index%
+label-urgent-padding = 1
 
 [module/cpu]
 type = internal/cpu
@@ -73,7 +91,7 @@ animation-discharging-framerate = 5000
 type = internal/date
 interval = 300
 format-prefix = " " 
-date = "%h %d "
+date = "%a %h %d "
 date-alt = "%d-%m-%y"
 label = "%date%"
 
